--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,7 @@
     <color name="light">#A1A4B2</color>
     <color name="purt">#8E97FD</color>
     <color name="TELOL">#FAF7F2</color>
+    <color name="button">#8E97FD</color>
+    <color name="purlish">#3F414E</color>
+    <color name="textlight">#C1CFCFCF</color>
 </resources>
