--- a/app/src/main/res/layout/activity_bringingto_five.xml
+++ b/app/src/main/res/layout/activity_bringingto_five.xml
@@ -29,21 +29,184 @@
         android:layout_marginTop="11dp"
         android:fontFamily="@font/oswaldlight"
         android:text="@string/focuus5"
-        android:textColor="@color/light"
+        android:textColor="#78909C"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Silencio" />
 
-    <ImageView
-        android:id="@+id/ReduceStress"
-        android:layout_width="377dp"
-        android:layout_height="858dp"
-        android:background="@drawable/group_6863"
+
+    <ImageButton
+        android:id="@+id/letit"
+        android:layout_width="191dp"
+        android:layout_height="260dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="44dp"
+        android:background="@drawable/letit"
+        android:contentDescription="@string/todo"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/focusTopic" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/oswaldmedium"
+        android:text="@string/reduce_stress"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="@+id/letit"
+        app:layout_constraintEnd_toEndOf="@+id/letit"
+        app:layout_constraintHorizontal_bias="0.522"
+        app:layout_constraintStart_toStartOf="@+id/letit"
+        app:layout_constraintTop_toTopOf="@+id/letit"
+        app:layout_constraintVertical_bias="0.941"
+        android:textSize="19sp"
+        />
+
+    <ImageButton
+        android:id="@+id/sisdit"
+        android:layout_width="182dp"
+        android:layout_height="167dp"
+        android:layout_marginTop="64dp"
+        android:background="@drawable/sidit"
         android:contentDescription="@string/todo"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.555"
+        app:layout_constraintHorizontal_bias="0.361"
+        app:layout_constraintStart_toEndOf="@+id/letit"
+        app:layout_constraintTop_toBottomOf="@+id/focusTopic" />
+
+    <TextView
+        android:layout_width="132dp"
+        android:layout_height="52dp"
+        android:fontFamily="@font/oswaldmedium"
+        android:text="@string/improve_performance"
+        android:textColor="@color/white"
+        android:textSize="21sp"
+        app:layout_constraintBottom_toBottomOf="@+id/sisdit"
+        app:layout_constraintEnd_toEndOf="@+id/sisdit"
+        app:layout_constraintHorizontal_bias="0.52"
+        app:layout_constraintStart_toStartOf="@+id/sisdit"
+        app:layout_constraintTop_toTopOf="@+id/sisdit"
+        app:layout_constraintVertical_bias="0.904" />
+
+    <ImageButton
+        android:id="@+id/stoyat"
+        android:layout_width="182dp"
+        android:layout_height="167dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/stoyat"
+        android:contentDescription="@string/todo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.087"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="247dp"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintTop_toBottomOf="@+id/letit" />
+
+    <TextView
+        android:layout_width="132dp"
+        android:layout_height="52dp"
+        android:fontFamily="@font/oswaldmedium"
+        android:text="@string/increse_happiness"
+        android:textColor="@color/strong"
+        android:textSize="21sp"
+        app:layout_constraintBottom_toBottomOf="@+id/stoyat"
+        app:layout_constraintEnd_toEndOf="@+id/stoyat"
+        app:layout_constraintHorizontal_bias="0.52"
+        app:layout_constraintStart_toStartOf="@+id/stoyat"
+        app:layout_constraintTop_toTopOf="@+id/stoyat"
+        app:layout_constraintVertical_bias="0.904" />
+
+    <ImageButton
+        android:id="@+id/grustit"
+        android:layout_width="186dp"
+        android:layout_height="244dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/grusiti"
+        android:contentDescription="@string/todo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.3"
+        app:layout_constraintStart_toEndOf="@+id/stoyat"
+        app:layout_constraintTop_toBottomOf="@+id/sisdit" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/oswaldmedium"
+        android:text="@string/ansa"
+        android:textColor="@color/strong"
+        app:layout_constraintBottom_toBottomOf="@+id/grustit"
+        app:layout_constraintEnd_toEndOf="@+id/grustit"
+        app:layout_constraintHorizontal_bias="0.522"
+        app:layout_constraintStart_toStartOf="@+id/grustit"
+        app:layout_constraintTop_toTopOf="@+id/grustit"
+        app:layout_constraintVertical_bias="0.941"
+        android:textSize="19sp"
+        />
+
+
+    <ImageButton
+        android:id="@+id/lezet"
+        android:layout_width="191dp"
+        android:layout_height="260dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="24dp"
+        android:background="@drawable/lezet"
+        android:contentDescription="@string/todo"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/stoyat" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/oswaldmedium"
+        android:text="@string/personal_growth"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="@+id/lezet"
+        app:layout_constraintEnd_toEndOf="@+id/lezet"
+        app:layout_constraintHorizontal_bias="0.522"
+        app:layout_constraintStart_toStartOf="@+id/lezet"
+        app:layout_constraintTop_toTopOf="@+id/lezet"
+        app:layout_constraintVertical_bias="0.941"
+        android:textSize="19sp"
+        />
+
+    <ImageButton
+        android:id="@+id/spit"
+        android:layout_width="191dp"
+        android:layout_height="260dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/lezhit"
+        android:contentDescription="@string/todo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/lezet"
+        app:layout_constraintTop_toBottomOf="@+id/grustit" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/oswaldmedium"
+        android:text="@string/better_sleep"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="@+id/spit"
+        app:layout_constraintEnd_toEndOf="@+id/spit"
+        app:layout_constraintHorizontal_bias="0.522"
+        app:layout_constraintStart_toStartOf="@+id/spit"
+        app:layout_constraintTop_toTopOf="@+id/spit"
+        app:layout_constraintVertical_bias="0.941"
+        android:textSize="19sp"
+        />
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_nav"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:background="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:menu="@menu/menu" >
+
+    </com.google.android.material.bottomnavigation.BottomNavigationView>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
