--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu
+    xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/home2"
         android:icon="@drawable/home3"
-        android:title="@string/home"/>
+        android:title="@string/home" />
     <item
         android:icon="@drawable/triangle"
         android:title="@string/meditate"
